# yolact_ros

./: .gitmodules  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.cfg  setup.py
cfg/: Yolact.cfg
config/: cameras.yaml  yolact_config.yaml
launch/: cameras.launch.py  yolact_ros.launch  yolact_ros2.launch.py
msg/: Box.msg  Detection.msg  Mask.msg
scripts/: yolact_edge_ros  yolact_ros  yolact_ros.py  yolact_ros_node  yolact_ros_node.py
yolact_ros2/: yolact_ros2.py
